setup-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: silver
