ext-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-inggw 
spec:
  type: ExternalName
  externalName: istio-ingressgateway.istio-system.svc.cluster.local
  ports:
    - name: http
      port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: internal-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/keep-alive: 1000s
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  tls:
    - hosts:
      - silver.red-stone.awscloud.io     
      # This assumes tls-secret exists and the SSL 
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
  - host: silver.red-stone.awscloud.io
    http:
      paths:
      - backend:
          serviceName: istio-inggw
          servicePort: 80
